security comment + FT scheduleUpstreamFeedbackTick in system components