@@ -95,7 +95,7 @@ public class SpoutExecutor extends Executor {
     }
 
     public void init(final ArrayList<Task> idToTask, int idToTaskBase) throws InterruptedException {
-        this.threadId = Thread.currentThread().getId();
+        this.threadId = Thread.currentThread().threadId();
         executorTransfer.initLocalRecvQueues();
         workerReady.await();
         while (!stormActive.get()) {
@@ -321,7 +321,7 @@ public class SpoutExecutor extends Executor {
             if (pendingForId != null) {
                 pending.put(id, pendingForId);
             }
-        } else if (this.upstreamFeedbackStreamId.equals(streamId)) {
+        } else if (Constants.FEEDBACK_STREAM_ID.equals(streamId)) {
             if (!this.upstreamFeedbackEnabled) {
                 LOG.debug("Upstream feedback skipped.");
             } else {
